Java 8 compatibility using a Multi-Release jar